; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/liquidio/extr_lio_main.c_force_io_queues_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/liquidio/extr_lio_main.c_force_io_queues_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.octeon_device = type { i64 }

@OCTEON_CN66XX = common dso_local global i64 0, align 8
@OCTEON_CN68XX = common dso_local global i64 0, align 8
@CN6XXX_SLI_PKT_INSTR_ENB = common dso_local global i32 0, align 4
@CN6XXX_SLI_PKT_OUT_ENB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.octeon_device*)* @force_io_queues_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @force_io_queues_off(%struct.octeon_device* %0) #0 {
  %2 = alloca %struct.octeon_device*, align 8
  store %struct.octeon_device* %0, %struct.octeon_device** %2, align 8
  %3 = load %struct.octeon_device*, %struct.octeon_device** %2, align 8
  %4 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @OCTEON_CN66XX, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %14, label %8

8:                                                ; preds = %1
  %9 = load %struct.octeon_device*, %struct.octeon_device** %2, align 8
  %10 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @OCTEON_CN68XX, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %8, %1
  %15 = load %struct.octeon_device*, %struct.octeon_device** %2, align 8
  %16 = load i32, i32* @CN6XXX_SLI_PKT_INSTR_ENB, align 4
  %17 = call i32 @octeon_write_csr(%struct.octeon_device* %15, i32 %16, i32 0)
  %18 = load %struct.octeon_device*, %struct.octeon_device** %2, align 8
  %19 = load i32, i32* @CN6XXX_SLI_PKT_OUT_ENB, align 4
  %20 = call i32 @octeon_write_csr(%struct.octeon_device* %18, i32 %19, i32 0)
  br label %21

21:                                               ; preds = %14, %8
  ret void
}

declare dso_local i32 @octeon_write_csr(%struct.octeon_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
